Add instructions for running the release. Fix mvn install and package targets to work properly.